--- a/public/study-resources/task-question.css
+++ b/public/study-resources/task-question.css
@@ -1,24 +1,4 @@
-#shwa-iframe-container {
-    margin: auto;
-    width: 1px;
-    height: 50vh;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-#shwa-iframe {
-    width: 90vw;
-
-    display: block;
-    flex-shrink: 0;
-    overflow: hidden;
-}
-
-div.group-container {
-    margin-bottom: 0;
-}
+@import "task-question-base.css";
 
 div.col-xs-6 {
     width: 33.3%;
