--- a/study-resources/question-group.css
+++ b/study-resources/question-group.css
@@ -10,3 +10,13 @@ div.row.text-short.question-container > div.question-title-container,
 div.row.text-long.question-container > div.question-title-container {
     padding-bottom: 0;
 }
+
+.question-text {
+    font-size: 16px;
+    margin-bottom: 2px;
+}
+
+/* Prettify array questions */
+div.row.array-flexible-row.question-container > div.answer-container {
+    padding-bottom: 15px;
+}
