--- a/study-resources/question-group.css
+++ b/study-resources/question-group.css
@@ -21,7 +21,7 @@ div.row.array-flexible-row.question-container > div.answer-container {
     padding-bottom: 15px;
 }
 
-div.answer-container > div.ls-answers.text-item > input[type=number] {
+div.answer-container > div.ls-answers input[type="number"] {
     width: unset;
     min-width: 15rem;
 }
